# fangfrisch

./: .flake8  .gitignore  .yamllint.yml  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml
contrib/: fangfrisch-has-news.sh  fangfrisch.service  fangfrisch.timer  initdb.sql  package.sh  sample-dump.conf  sample.conf  unittest.sh
doc/: fangfrisch.adoc  fangfrisch.html  install.txt  sample.conf  usage.txt
docs/: Makefile  combined.conf  eff.conf  example.conf  fangfrisch.adoc  fangfrisch.html  index.html  install.txt  internal.conf  sample.conf  sampleeff.conf  usage.txt  user.conf
fangfrisch/: __init__.py  __main__.py  config.py  db.py  download.py  dump.py  log.py  logging.py  refresh.py  task.py  util.py
fangfrisch/config/: __init__.py  config.py  fangfrischnews.py  interserver.py  malwarepatrol.py  sanesecurity.py  securiteinfo.py  urlhaus.py
htmlcov/: fangfrisch___init___py.html  fangfrisch_config___init___py.html  fangfrisch_config_config_py.html  fangfrisch_config_sanesecurity_py.html  fangfrisch_config_securiteinfo_py.html  fangfrisch_config_urlhaus_py.html  fangfrisch_db_py.html  fangfrisch_download_py.html  fangfrisch_logging_py.html  fangfrisch_refresh_py.html  fangfrisch_util_py.html  index.html  status.json
src/fangfrisch/: __init__.py  __main__.py  db.py  download.py  dump.py  log.py  refresh.py  task.py  util.py
src/fangfrisch/config/: __init__.py  config.py  fangfrischnews.py  interserver.py  malwarepatrol.py  sanesecurity.py  securiteinfo.py  urlhaus.py
tests/: __init__.py  coverage.rc  settings  settings.sh  test_config.py  test_db.py  test_download.py  test_dump.py  test_log.py  test_refresh.py  test_task.py  test_util.py  tests.conf  tests.sql
