# Copyright © 2020-2025 Ralph Seichter
#
# This file is part of "Fangfrisch".
#
# Fangfrisch is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Fangfrisch is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Fangfrisch. If not, see <https://www.gnu.org/licenses/>.

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "fangfrisch"
version = "1.9.2"
authors = [{name= "Ralph Seichter", email="fangfrisch@seichter.de"}]
dependencies = ["requests>=2.22.0", "SQLAlchemy>=1.4.0"]
description = "Update and verify unofficial Clam Anti-Virus signatures"
keywords = ["antivirus", "clamav", "freshclam", "refresh", "update"]
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 6 - Mature",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]

[project.scripts]
fangfrisch = "fangfrisch.__main__:main"

[project.urls]
Documentation = "https://rseichter.github.io/fangfrisch/"
Source = "https://github.com/rseichter/fangfrisch"
Issues = "https://github.com/rseichter/fangfrisch/issues"
