# vim: ts=4 sw=4 noet
#
# Copyright © 2020-2024 Ralph Seichter
#
# This file is part of "Fangfrisch".
#
# Fangfrisch is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Fangfrisch is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Fangfrisch. If not, see <https://www.gnu.org/licenses/>.

[metadata]
author = Ralph Seichter
author_email = fangfrisch@seichter.de
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: System Administrators
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3.7
	Topic :: System :: Systems Administration
	Topic :: Utilities
description = Update and verify unofficial Clam Anti-Virus signatures
keywords =
	antivirus
	clamav
	freshclam
	refresh
	update
long_description = file: README.rst
long_description_content_type = text/x-rst
name = fangfrisch
project_urls =
	Documentation = https://rseichter.github.io/fangfrisch/
	Source = https://github.com/rseichter/fangfrisch
	Tracker = https://github.com/rseichter/fangfrisch/issues
url = https://github.com/rseichter/fangfrisch
version = 1.9.1.dev1

[options.packages.find]
exclude =
	tests
	tests.*

[options]
install_requires =
	requests>=2.22.0
	SQLAlchemy>=1.4.0
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
	fangfrisch = fangfrisch.__main__:main

[options.package_data]
tests =
	*.conf
	*.sql
